--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     "prepare": "patch-package"
   },
   "dependencies": {
-    "@react-native-firebase/app": "6.4.0",
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-firebase/app": "^6.4.0",
+    "@react-native-firebase/auth": "^6.4.0",
+    "@react-navigation/native": "^5.1.6",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "^0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.5.0",
+    "react-navigation": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
