--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@react-native-community/masked-view": "^0.1.9",
     "@react-native-firebase/app": "^6.4.0",
     "@react-native-firebase/auth": "^6.4.0",
+    "@react-navigation/bottom-tabs": "^5.2.8",
+    "@react-navigation/material-bottom-tabs": "^5.1.10",
     "@react-navigation/native": "^5.1.6",
     "react": "16.9.0",
     "react-native": "^0.62.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.3.7"
+    "react-navigation": "^4.3.7",
+    "react-navigation-material-bottom-tabs": "^2.2.11"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
