--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^6.4.0",
     "@react-native-firebase/auth": "^6.4.0",
     "@react-navigation/bottom-tabs": "^5.2.8",
+    "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/material-bottom-tabs": "^5.1.10",
     "@react-navigation/native": "^5.1.6",
     "react": "16.9.0",
