Navigation + lite olika skärmar

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,9 +37,11 @@ target 'GrowApp' do
   pod 'ReactCommon/turbomodule/core', :path => "../node_modules/react-native/ReactCommon"
   pod 'Yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
 
-
   pod 'Firebase/Analytics'
   pod 'Firebase/Auth'
+  pod 'Firebase/Firestore'
+  pod 'Firebase/Core'
+  pod 'Firebase/Storage'
 
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
@@ -50,7 +52,8 @@ target 'GrowApp' do
     # Pods for testing
   end
 
-  use_native_modules!
+use_native_modules!
+
 end
 
 target 'GrowApp-tvOS' do
