--- a/package.json
+++ b/package.json
@@ -11,27 +11,39 @@
     "prepare": "patch-package"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.9",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^6.7.1",
     "@react-native-firebase/auth": "^6.7.1",
-    "@react-navigation/bottom-tabs": "^5.2.8",
-    "@react-navigation/drawer": "^5.5.1",
+    "@react-native-firebase/firestore": "^6.7.1",
+    "@react-native-firebase/storage": "^6.7.1",
+    "@react-navigation/bottom-tabs": "^5.3.4",
+    "@react-navigation/core": "^5.5.0",
+    "@react-navigation/drawer": "^5.6.4",
     "@react-navigation/material-bottom-tabs": "^5.1.10",
-    "@react-navigation/native": "^5.1.6",
-    "@react-navigation/stack": "^5.2.14",
-    "react": "16.9.0",
+    "@react-navigation/material-top-tabs": "^5.1.15",
+    "@react-navigation/native": "^5.2.4",
+    "@react-navigation/stack": "^5.2.19",
+    "firebase": "^7.14.2",
+    "formik": "^2.1.4",
+    "react": "^16.9.0",
     "react-native": "^0.62.2",
+    "react-native-action-button": "^2.8.5",
+    "react-native-appearance": "^0.3.3",
+    "react-native-check-box": "^2.1.7",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.5.0",
+    "react-native-screens": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.3.7",
+    "react-navigation": "^4.3.9",
     "react-navigation-material-bottom-tabs": "^2.2.11",
-    "react-navigation-tabs": "^2.8.12"
+    "react-navigation-tabs": "^2.8.12",
+    "uuid": "^3.3.3",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
