--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/core": "^5.5.0",
     "@react-navigation/drawer": "^5.6.4",
     "@react-navigation/material-bottom-tabs": "^5.1.10",
-    "@react-navigation/material-top-tabs": "^5.1.15",
+    "@react-navigation/material-top-tabs": "^5.2.4",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "firebase": "^7.14.2",
@@ -38,6 +38,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-navigation-material-bottom-tabs": "^2.2.11",
