--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-button-text": "^1.0.7",
     "react-native-image-picker": "^2.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.8.0",
