--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,7 +187,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
-
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.firebaseui:firebase-ui:0.6.0
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
