--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@react-navigation/stack": "^5.2.19",
     "firebase": "^7.14.4",
     "formik": "^2.1.4",
-    "react": "^16.9.0",
+    "moment": "^2.26.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-native": "^0.62.2",
     "react-native-action-button": "^2.8.5",
     "react-native-appearance": "^0.3.3",
     "react-native-check-box": "^2.1.7",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-button-text": "^1.0.7",
