--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.1",
     "react-native-image-button-text": "^1.0.7",
     "react-native-image-picker": "^2.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
