--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^7.14.4",
     "formik": "^2.1.4",
     "moment": "^2.26.0",
+    "native-base": "^2.13.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "^0.62.2",
