Navigation + halvfärdig reminder

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,8 +41,10 @@ target 'GrowApp' do
   pod 'Firebase/Auth'
   pod 'Firebase/Firestore'
   pod 'Firebase/Core'
-  pod 'Firebase/Storage'
   pod 'Firebase/Messaging'
+  pod 'Firebase/Storage'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
