--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext {
+        googlePlayServicesVersion = "<Your play services version>" // default: "+"
+        firebaseMessagingVersion = "<Your Firebase version>" // default: "+"
         buildToolsVersion = "28.0.3"
         minSdkVersion = 16
         compileSdkVersion = 28
@@ -17,9 +19,14 @@ buildscript {
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'com.google.gms:google-services:4.3.3'
 
+        implementation 'com.google.firebase:firebase-analytics:17.3.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    apply plugin: 'com.google.gms.google-services'
+
 }
 
 allprojects {
