--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,6 +187,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation project(':react-native-push-notification')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
