--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext {
-        googlePlayServicesVersion = "<Your play services version>" // default: "+"
-        firebaseMessagingVersion = "<Your Firebase version>" // default: "+"
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "+" // default: "+"
         buildToolsVersion = "28.0.3"
         minSdkVersion = 16
         compileSdkVersion = 28
@@ -17,9 +17,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath 'com.google.gms:google-services:4.2.0'
-        classpath 'com.google.gms:google-services:4.3.3'
 
-        implementation 'com.google.firebase:firebase-analytics:17.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
