--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-tab-view": "^2.14.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
