--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/material-top-tabs": "^5.2.4",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
+    "emoji-utils": "^1.0.1",
     "firebase": "^7.14.4",
     "formik": "^2.1.4",
     "moment": "^2.26.0",
