--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-gifted-chat": "^0.16.1",
     "react-native-image-button-text": "^1.0.7",
     "react-native-image-picker": "^2.3.1",
+    "react-native-in-app-utils": "^6.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-modal-datetime-picker": "^7.4.2",
     "react-native-paper": "^3.8.0",
